[x11] fix: get desktop bounds correctly (fix aseprite/aseprite#3118)
Use Xrandr's XRRGetMonitors function to find the position, bounds, and
"main screen" status of all monitors.

On X11, there is no supported method to find the workarea of a monitor.
This includes the _NET_WORKAREA atom, which breaks multi-monitor
setups. This may not be an issue as most window managers aggressively
and correctly enforce their, albeit private, workarea for windows.

--- a/os/CMakeLists.txt
+++ b/os/CMakeLists.txt
@@ -57,7 +57,9 @@ else()
     x11/system.cpp
     x11/window.cpp
     x11/x11.cpp
-    x11/xinput.cpp)
+    x11/xinput.cpp
+    x11/monitor.cpp
+    x11/monitor.h)
 endif()
 
 ######################################################################
@@ -142,7 +144,10 @@ else()
   if(NOT X11_Xinput_FOUND)
     message(FATAL_ERROR "Xinput library not found")
   endif()
-  list(APPEND LAF_OS_PLATFORM_LIBS ${X11_Xcursor_LIB})
+  if(NOT X11_Xrandr_FOUND)
+    message(FATAL_ERROR "Xrandr library not found")
+  endif()
+  list(APPEND LAF_OS_PLATFORM_LIBS ${X11_Xcursor_LIB} ${X11_Xrandr_LIB})
 
   check_library_exists(X11 XOpenIM "${X11_LIB_SEARCH_PATH}" XIM_FOUND)
 
