[dlgs] Add new laf-dlgs-proc exe to show the file dialog in another process (fix aseprite/aseprite#4412)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ option(LAF_WITH_TESTS "Enable LAF tests" ON)
 option(LAF_WITH_CLIP "Enable clip module (required for future drag-and-drop feature)" ON)
 if(WIN32)
   option(LAF_WITH_IME "Enable IME for CJK input" OFF)
+  option(LAF_WITH_DLGS_PROC "Enable laf-dlgs-process.exe for Windows to open the FileDialog through an external process" OFF)
+  set(LAF_DLGS_PROC_NAME "laf-dlgs-process" CACHE STRING "Name of the process to show native dialogs")
 endif()
 set(LAF_BACKEND ${LAF_DEFAULT_BACKEND} CACHE STRING "Select laf backend")
 set_property(CACHE LAF_BACKEND PROPERTY STRINGS "none" "skia")
